fix hero h1 font size on mobile

--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -116,4 +116,8 @@
     max-width: 90vw;
     height: auto;
   }
+
+  .homepage .hero h1 {
+    font-size: 3.4rem;
+  }
 }
